src/objects/AnswerResponse__c.object
<CustomObject>
    <fields>
        <fullName>Answer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Answer</label>
        <referenceTo>Answer__c</referenceTo>
        <relationshipLabel>Answer Responses</relationshipLabel>
        <relationshipName>AnswerResponses</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <label>Key</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>QuestionResponse__c</fullName>
        <label>Question Response</label>
        <referenceTo>QuestionResponse__c</referenceTo>
        <relationshipLabel>Answer Responses</relationshipLabel>
        <relationshipName>AnswerResponses</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Answer Response</label>
    <nameField>
        <displayFormat>AR-{00000000}</displayFormat>
        <label>Answer Reponse Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Answer Responses</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>AnswerResponseCannotBeEdited</fullName>
        <active>true</active>
        <description>An answer response cannot be edited.</description>
        <errorConditionFormula>NOT( ISNEW() )</errorConditionFormula>
        <errorMessage>An answer response cannot be edited.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateAnswerLookup</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISBLANK( Answer__c )),  Answer__r.Question__c !=  QuestionResponse__r.Question__c )</errorConditionFormula>
        <errorMessage>The answer must belong to the same question.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ValidateAnswerRequired</fullName>
        <active>true</active>
        <errorConditionFormula>AND(NOT(ISPICKVAL(QuestionResponse__r.Question__r.Type__c, &apos;Matching Options&apos;)), ISBLANK( Answer__c ))</errorConditionFormula>
        <errorDisplayField>Answer__c</errorDisplayField>
        <errorMessage>The answer is required.</errorMessage>
    </validationRules>
</CustomObject>